1999-05-21  Linus Nordberg  <linus@swox.se>

	* gmp.h: Typedef `gmp_rand_state' as an array with one element.
	Change prototypes accordingly.
	* gmp-impl.h: Change prototypes using `gmp_rand_state'.
	* rand.c (gmp_rand_init): Take `gmp_rand_state' as argument
	instead of a pointer to a `gmp_rand_state'.
	* mpf/urandom.c (mpf_urandomb): Ditto.
	* mpz/urandom.c (mpz_urandomb): Ditto.
	* mpn/generic/rawrandom.c (mpn_rawrandom): Ditto.
	* randcmui.c (__gmp_rand_init_common_ui): Ditto.
	* randlc.c (gmp_rand_init_lc): Ditto.
	* randlcui.c (gmp_rand_init_lc_ui): Ditto.
	* randui.c (gmp_rand_init_ui): Ditto.
	* randcm.c (__gmp_rand_init_common): Ditto.
	* randclr.c (gmp_rand_clear): Ditto.

1999-05-20  Linus Nordberg  <linus@swox.se>

	* Makefile.in: Rename randi.c --> rand.c, randi_lc.c --> randlc.c,
	randicom.c --> randcm.c.  Add randui.c, randcmui.c, randlcui.c.
	* make.bat: Ditto.
	
	* gmp.h: Add prototypes for gmp_rand_init_ui() and
	gmp_rand_init_lc_ui().
	* gmp-impl.h: Add prototypes for __gmp_rand_init_common() and
	__gmp_rand_init_common_ui().

	* randlc.c, randcm.c, randclr.c, rand.c: Change #include of
	<gmp.h> to "gmp.h".
	* randclr.c: Include stdlib.h for free().
	* rand.c: Include gmp-impl.h.

1999-05-12  Torbjorn Granlund  <tege@swox.com>

	* mpn/configure.in: Put generic m68k alternative last.

1999-05-04  Torbjorn Granlund  <tege@swox.com>

	* demos/pexpr.c (setup_error_handler): Use sigemptyset to create
	empty set (for portability).
	(fns): Fix typo '#if #if'.
	(mpz_eval_expr): Implement FERMAT and MERSENNE.

	* demos/pexpr.c: Cast longjmp argument via long to silent warnings on
	64-bit hosts.

1999-05-03  Torbjorn Granlund  <tege@swox.com>

	* demos/pexpr.c: Add #defines for GMP 1.x and 2.0 compatibility.

	* demos/pexpr.c (setup_error_handler): New function; take signal
	handler setup code from main(), with major modifications to use modern
	signal interface.
	(main): Remove signal handler setup code; call setup_error_handler.
